# dbt_sqlfluff

./: pyproject.toml
dbt/: .sqlfluff  dbt_project.yml
dbt/models/example/: macro_example_01.sql  my_first_dbt_model.sql
