[tool.poetry]
name = "dbt-sqlfluff"
version = "0.1.0"
description = ""
authors = ["tenajima <tenajima@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
dbt-bigquery = "^1.0.0"
sqlfluff = "^0.11.0"
sqlfluff-templater-dbt = "^0.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
